ndslabs/tests/services/tea.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndsl-ingress
spec:
  rules:
  - host: shhhh.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
